[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dareplane_utils"
version = "0.0.1"
authors = [{name="Matthias Dold", email="matthias.dold@gmx.de"}]
description = "Default utilities for the dareplane platform"
readme ="README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "./"
]
filterwarnings = ["ignore:::.*fire.core"]
