[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dareplane_utils"
version = "0.0.18"
authors = [{name="Matthias Dold", email="matthias.dold@gmx.net"}]
description = "Default utilities for the dareplane platform"
readme ="README.md"
requires-python = ">=3.10"

dependencies = [
  "colorlog >= 6.8.2",
  "contourpy >= 1.2.1",
  "coverage >= 7.5.3",
  "cycler >= 0.12.1",
  "fonttools >= 4.53.0",
  "iniconfig >= 2.0.0",
  "kiwisolver >= 1.4.5",
  "matplotlib >= 3.9.0",
  "numpy >= 1.26.4",
  "packaging >= 24.0",
  "pillow >= 10.3.0",
  "pluggy >= 1.5.0",
  "psutil >= 5.9.8",
  "pylsl >= 1.16.2",
  "pyparsing >= 3.1.2",
  "pytest >= 8.2.2",
  "python-dateutil >= 2.9.0",
  "scipy >= 1.13.1",
  "six >= 1.16.0",
  "ujson >= 5.10.0",
  "xmltodict >= 0.13.0"
]

[project.urls]
"homepage" = "https://github.com/matthiasdold/dareplane-pyutils"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "./"
]
filterwarnings = ["ignore:::.*fire.core"]
